# gh-weekly-commits

./: .codecov.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  daily_update.yml  python-publish.yml  release-pypi.yml
scripts/: plot_commits.py
src/ghweekly/: cli.py  exceptions.py  main.py  plotting.py  utils.py
tests/: test_cli.py  test_exceptions.py  test_main.py  test_plotting.py  test_utils.py
