[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "ghweekly"
version = "0.1.5"
description = "Visualize weekly GitHub commit activity across repositories."
readme = "README.md"
license = "MIT"
authors = [ { name = "Bhimraj Yadav" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "matplotlib", "pandas", "requests" ]

urls.BugTracker = "https://github.com/bhimrazy/gh-weekly-commits/issues"
urls.Documentation = "https://github.com/bhimrazy/gh-weekly-commits#readme"
urls.Homepage = "https://github.com/bhimrazy/gh-weekly-commits"
urls.Source = "https://github.com/bhimrazy/gh-weekly-commits"
scripts.ghweekly = "ghweekly.cli:main"

[dependency-groups]
dev = [ "coverage", "pytest", "pytest-cov", "ruff" ]

[tool.uv]
package = true
